# app/controllers/api/users_controller.rb
@@ -11,19 +11,4 @@ class Api::UsersController < ApplicationController
       render json: { error: "User not found" }, status: :not_found
     end
   end
-
-  def create
-    @user = User.new(user_params)
-    if @user.save
-      render :show, status: :created
-    else
-      render json: { errors: @user.errors.full_messages }, status: :unprocessable_entity
-    end
-  end
-
-  private
-
-  def user_params
-    params.require(:user).permit(:email, :full_name, :role)
-  end
 end
