# config/routes.rb
@@ -2,11 +2,16 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
   post "/graphql", to: "graphql#execute"
+
   if Rails.env.development?
     mount GraphiQL::Rails::Engine, at: "/graphiql", graphql_path: "/graphql"
   end
 
   namespace :api do
+    post "auth/login", to: "auth#login"
+    post "auth/logout", to: "auth#logout"
+    post "auth/register", to: "auth#register"
+
     resources :users, only: [ :index, :show, :create ] do
       resources :tasks, only: [ :index, :create ]
     end
